designed card using bootstrap

--- a/index2.html
+++ b/index2.html
@@ -59,73 +59,202 @@
             </div>
         </nav>
     </header>
-   
-     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <section class="wealth" >
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 pt-5 text-align-center">
-                            <h5>You called it waste, we call it Wealth </h5>
-                            <p>There is no such thing as away. when we throw something away, it must go somewhere</p>
-                        </div>
-                        <div class="col-md-6 col-sm-6 pt-5">
-                <img src="/Asset/img/bottleTreasure.svg" class="img-fluid" class="d-block w-100"  alt="">
-                        </div>
-                    </div>
-                </div>
-                </section>
-          </div>
-          <div class="carousel-item">
-            <section class="wealth2" >
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 pt-5 text-align-center">
-                            <h5>Don’t be trashy!
-                                Recycle! </h5>
-                            <p>There is no such thing as away. when we throw something away, it must go somewhere</p>
-                        </div>
-                        <div class="col-md-6 col-sm-6 pt-5">
-                <img src="/Asset/img/trash.svg" class="img-fluid" class="d-block w-100"  alt="">
+            <div class="carousel-item active" data-bs-interval="10000000">
+                <section class="wealth">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 pt-5 text-align-center">
+                                <h5 class="texts">You called it waste, we call it Wealth </h5>
+                                <p>There is no such thing as away. when we throw something away, it must go somewhere
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-sm-6 pt-5 d-flex align-items-center justify-content-center">
+                                <img src="/Asset/img/bottleTreasure.svg" class="img-fluid" class="d-block w-100" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
                 </section>
-          </div>
-          <div class="carousel-item">
-            <section class="wealth3" >
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6 pt-5 text-align-center">
-                            <h5>Waste isn’t waste 
-                                until we waste it </h5>
-                            <p>There is no such thing as away. when we throw something away, it must go somewhere</p>
-                        </div>
-                        <div class="col-md-6 col-sm-6 pt-5">
-                <img src="/Asset/img/bear 1.svg" class="img-fluid" class="d-block w-100"  alt="">
+            </div>
+            <div class="carousel-item" data-bs-interval="10000000">
+                <section class="wealth2">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 pt-5 text-align-center">
+                                <h5 class="texts">Don’t be trashy!
+                                    Recycle! </h5>
+                                <p>There is no such thing as away. when we throw something away, it must go somewhere
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-sm-6 pt-5  d-flex align-items-center justify-content-center">
+                                <img src="/Asset/img/trash.svg" class="img-fluid" class="d-block w-100" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
                 </section>
+            </div>
+            <div class="carousel-item" data-bs-interval="10000000">
+                <section class="wealth3">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 col-sm-6 pt-5 text-align-center">
+                                <h5 class="texts">Waste isn’t waste
+                                    until we waste it </h5>
+                                <p>There is no such thing as away. when we throw something away, it must go somewhere
+                                </p>
+                            </div>
+                            <div class="col-md-6 col-sm-6 pt-5  d-flex align-items-center justify-content-center">
+                                <img src="/Asset/img/bear 1.svg" class="img-fluid" class="d-block w-100" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="treasure">
+        <h4>Treasures</h4>
+    </div>
+
+
+    <div class="container">
+        <div class="card-group">
+            <div class="card text-white bg-success m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">UBC</div>
+                <img src="/Asset/img/treasureCan.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Primary card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Aluminium Can Containers.</p>
+                </div>
+            </div>
+
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">BBC</div>
+                <img src="/Asset/img/treasurePaper.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Secondary card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Discarded/ New Cartons.</p>
+                </div>
+            </div>
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">GBS</div>
+                <img src="/Asset/img/trasurebottle.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Success card title</h5> -->
+                    <p class="card-text text-align justify-content-center d-flex">Glass Containers .</p>
+                </div>
+            </div>
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">PET</div>
+                <img src="/Asset/img/treasureplastic.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Danger card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Pet botles.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="container">
+
+        <div class="card-group">
+            <div class="card text-white bg-success m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">UBC</div>
+                <img src="/Asset/img/treasurekeg.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Primary card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Plastic.</p>
+                </div>
+            </div>
+
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">BBC</div>
+                <img src="/Asset/img/treasurepolythene-bag.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Secondary card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Polythene Bag.</p>
+                </div>
+            </div>
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">GBS</div>
+                <img src="/Asset/img/treasurebottle-caps.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Success card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Glass Containers .</p>
+                </div>
+            </div>
+            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+                <div class="card-header text-align-center justify-content-center d-flex">PET</div>
+                <img src="/Asset/img/treasureplastic.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Danger card title</h5> -->
+                    <p class="card-text text-align-center justify-content-center d-flex">Pet botles</p>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- <div class="row row-cols-1 row-cols-md-2 g-5">
+        <div class="col">
+          <div class="card">
+              <h5 class="card-title">Card title</h5>
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div> 
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div> -->
 
 
 
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <script src="main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
