--- a/index.html
+++ b/index.html
@@ -75,17 +75,18 @@
                         Wastexpert- store.
                     </p>
                 </div>
-                <div class="col-md-6 pt-5">
+                <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
                     <img src="/Asset/img/AboutUSvolunteer.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
-
     </section>
+
+    <!---------------WASTEMENACE---------------->
     <section class="WasteMenace">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 pt-5">
+                <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
                     <img src="/Asset/img/about-us-wasteArea.svg" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-6 pt-5">
@@ -104,6 +105,8 @@
             </div>
         </div>
     </section>
+<!---------------OUR SOLUTION------------------>
+
     <section class="OurSolution">
         <div class="container">
             <div class="row">
@@ -120,12 +123,14 @@
                         tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna.
                     </p>
                 </div>
-                <div class="col-md-6 pt-5">
+                <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
                     <img src="/Asset/img/wastebinAbtUS.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
     </section>
+
+    <!-------------ADVICE------------------->
     <section class="advice">
         <div class="container">
             <div class="row">
@@ -149,14 +154,14 @@
         <div class="newsletter">
         <div class="container">
                 <div class="row">
-                    <div class="col-md-3 pt-5">
+                    <div class="col-md-6 pt-5">
                         <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
                     </div>
-                    <div class=" enter col-md-9 pt-5">
-                        <form action="">
-                            <label for="e-mail">Subscribe to our Newsletter</label> 
+                    <div class=" enter col-md-6 pt-5 ">
+                        <form action="" class="d-flex">
+                            <label for="e-mail">Subscribe to our Newsletter</label>  <br>
                             <input type="email" name="" placeholder="Enter your email address here" id=""> <button
-                                type="submit">Sign Up</button>
+                                type="submit"> <a href=""></a> Sign Up</button>
                             </form>
                         </div>
                     </div>
