--- a/index2.html
+++ b/index2.html
@@ -124,43 +124,39 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <div class="treasure">
-        <h4>Treasures</h4>
-    </div>
-
-
     <div class="container">
+        <div class="treasure">
+            <h4>Treasures</h4>
+        </div>
+
+
         <div class="card-group">
-            <div class="card text-white bg-success m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">UBC</div>
                 <img src="/Asset/img/treasureCan.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Primary card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Aluminium Can Containers.</p>
                 </div>
             </div>
 
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">BBC</div>
                 <img src="/Asset/img/treasurePaper.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Secondary card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Discarded/ New Cartons.</p>
                 </div>
             </div>
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">GBS</div>
                 <img src="/Asset/img/trasurebottle.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Success card title</h5> -->
                     <p class="card-text text-align justify-content-center d-flex">Glass Containers .</p>
                 </div>
             </div>
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">PET</div>
                 <img src="/Asset/img/treasureplastic.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Danger card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Pet botles.</p>
                 </div>
             </div>
@@ -174,80 +170,118 @@
     <div class="container">
 
         <div class="card-group">
-            <div class="card text-white bg-success m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">UBC</div>
                 <img src="/Asset/img/treasurekeg.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Primary card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Plastic.</p>
                 </div>
             </div>
 
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">BBC</div>
                 <img src="/Asset/img/treasurepolythene-bag.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Secondary card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Polythene Bag.</p>
                 </div>
             </div>
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">GBS</div>
                 <img src="/Asset/img/treasurebottle-caps.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Success card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Glass Containers .</p>
                 </div>
             </div>
-            <div class="card text-white bg-success  m-1 mb-3" style="max-width: 18rem;">
+            <div class="card text-white m-1 mb-3" style="max-width: 18rem;">
                 <div class="card-header text-align-center justify-content-center d-flex">PET</div>
                 <img src="/Asset/img/treasureplastic.svg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <!-- <h5 class="card-title">Danger card title</h5> -->
                     <p class="card-text text-align-center justify-content-center d-flex">Pet botles</p>
                 </div>
             </div>
         </div>
+        <section class="Sectiontable">
+            <div class="container">
+                <h4 class="pt-5">Recycle Points Earning Charts</h4>
+                <div class="tt">
+                    <table class="table table-bordered table-responsive">
+                        <thead>
+                            <tr>
+                                <th scope="col">S/N</th>
+                                <th scope="col">Description of Recyclables</th>
+                                <th scope="col">Acronym</th>
+                                <th scope="col">Weight</th>
+                                <th scope="col">Quantity
+                                    (Pce)</th>
+                                <th scope="col">Points</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>PET Plastic Bottles</td>
+                                <td>PET</td>
+                                <td>9.9 grams</td>
+                                <td>1</td>
+                                <td>1</td>
 
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Used Beverage Can ( Aluminum)</td>
+                                <td>UBC</td>
+                                <td>14
+                                    gram</td>
+                                <td>1</td>
+                                <td>1</td>
 
-        <!-- <div class="row row-cols-1 row-cols-md-2 g-5">
-        <div class="col">
-          <div class="card">
-              <h5 class="card-title">Card title</h5>
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Pure Water Sachets</td>
+                                <td>PWS</td>
+                                <td>10
+                                    kg</td>
+                                <td>10</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4 </th>
+                                <td>Old Newspaper</td>
+                                <td>ONP</td>
+                                <td>50
+                                    grams</td>
+                                <td>5</td>
+                                <td>1</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>Brown Corrugated Cartons</td>
+                                <td>BBC</td>
+                                <td>11
+                                    grams</td>
+                                <td>10</td>
+                                <td>1</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td>Glass Bottle ( Flint/ Amber/ Green Only </td>
+                                <td>GBS</td>
+                                <td>10
+                                    grams</td>
+                                <td>10</td>
+                                <td>1</td>
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-      </div> -->
+
+        </section>
+
 
 
 
